--- a/Spartan.Silk/Spartan.Silk.csproj
+++ b/Spartan.Silk/Spartan.Silk.csproj
@@ -4,12 +4,14 @@
     <OutputType>Library</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Resources\FragQuad.glsl" />
+    <None Remove="Resources\mono_font.png" />
+    <None Remove="Resources\mono_font.txt" />
     <None Remove="Resources\VertQuad.glsl" />
   </ItemGroup>
 
@@ -18,6 +20,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\FragQuad.glsl" />
+    <EmbeddedResource Include="Resources\mono_font.png" />
+    <EmbeddedResource Include="Resources\mono_font.txt" />
     <EmbeddedResource Include="Resources\VertQuad.glsl" />
   </ItemGroup>
 
